fix: code wrap removed

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -84,7 +84,6 @@ code {
 div.highlighter-rouge code {
   display: block;
   overflow-x: auto;
-  white-space: pre-wrap;
   padding: 1rem;
 }
 
